--- a/configs/api-only.toml
+++ b/configs/api-only.toml
@@ -1,183 +1,126 @@
 # ============================================================
-# IRENE VOICE ASSISTANT - API-ONLY CONFIGURATION PROFILE
+# IRENE VOICE ASSISTANT v14.0.0 - CLEAN ARCHITECTURE
 # ============================================================
-# Server deployment configuration for API-only operation.
-# No audio components, optimized for web services and integrations.
-# Perfect for cloud deployments and microservice architectures.
 
-[core]
 name = "Irene"
-version = "13.0.0"
+version = "14.0.0"
 debug = false
 log_level = "INFO"
-language = "en-US"
-timezone = "UTC"
 
-# Runtime performance settings for server
-max_concurrent_commands = 50
-command_timeout_seconds = 15.0
-context_timeout_minutes = 10
-
-# Monitoring and metrics enabled for production
-enable_metrics = true
+# ============================================================
+# SYSTEM CAPABILITIES - Hardware & Services
+# ============================================================
+[system]
+microphone_enabled = false      # Hardware capability
+audio_playback_enabled = false  # Hardware capability
+web_api_enabled = true         # Service capability
+web_port = 8000
+metrics_enabled = false
 metrics_port = 9090
-enable_profiling = false
 
 # ============================================================
-# ASSET MANAGEMENT - Server Storage
-# ============================================================
-[assets]
-models_root = "./models"
-cache_root = "./cache"
-data_root = "./data"
-credentials_root = "./credentials"
-
-# ============================================================
-# COMPONENT SYSTEM - Text Processing Only
-# ============================================================
-[components]
-enabled = ["llm", "nlu", "text_processor", "intent_system"]
-disabled = ["audio", "tts", "asr", "voice_trigger"]
-
-# ============================================================
-# WORKFLOW SYSTEM - No Voice Workflows
-# ============================================================
-[workflows]
-enabled = []  # API-driven operation only
-disabled = ["voice_assistant", "continuous_listening"]
-
-# ============================================================
-# INPUT/OUTPUT SYSTEM - Web API Only
+# INPUT SOURCES - Data Entry Points
 # ============================================================
 [inputs]
-enabled = ["web", "cli"]
-disabled = ["microphone"]
-default = "web"
+microphone = false              # Microphone input source
+web = true                     # Web interface input
+cli = true                     # Command line input
+default_input = "web"
 
-[outputs]
-enabled = ["web", "text"]
-disabled = ["tts"]
-default = "web"
-
-# ============================================================
-# PROVIDER SYSTEM - Text and Cloud Services Only
-# ============================================================
-[providers.audio]
-enabled = []  # No audio providers
-disabled = ["sounddevice", "console", "aplay", "audioplayer", "simpleaudio"]
-
-[providers.tts]
-enabled = []  # No TTS providers for API-only
-disabled = ["elevenlabs", "pyttsx", "silero_v3", "silero_v4", "vosk_tts", "console"]
-
-[providers.asr]
-enabled = []  # No ASR providers for API-only
-disabled = ["vosk", "whisper", "google_cloud"]
-
-[providers.llm]
-# Cloud LLM providers for text processing
-enabled = ["openai", "anthropic"]
-disabled = ["vsegpt"]
-default = "openai"
-fallback_providers = []
-
-[providers.voice_trigger]
-enabled = []  # No voice trigger
-disabled = ["openwakeword", "microwakeword"]
-
-[components.nlu]
-# API-optimized NLU with comprehensive keyword and semantic matching
+# Microphone Input Configuration
+[inputs.microphone_config]
 enabled = true
+# device_id = null   # Uncomment and set to specify audio device (null = default device)
+sample_rate = 16000      # Audio sample rate (Hz)
+channels = 1            # 1 = mono, 2 = stereo
+chunk_size = 1024        # Audio buffer size
+
+# Web Input Configuration
+[inputs.web_config]
+enabled = true
+websocket_enabled = true
+rest_api_enabled = true
+
+# CLI Input Configuration
+[inputs.cli_config]
+enabled = true
+prompt_prefix = "irene> "
+history_enabled = true
+
+# ============================================================
+# COMPONENT CONFIGURATIONS - Provider Management
+# ============================================================
+[tts]
+enabled = false
+default_provider = "console"
+fallback_providers = ['console']
+
+
+[audio]
+enabled = false
+default_provider = "console"
+fallback_providers = ['console']
+concurrent_playback = false
+
+
+[asr]
+enabled = false
+default_provider = "whisper"
+fallback_providers = ['whisper']
+
+
+[llm]
+enabled = true
+default_provider = "openai"
+fallback_providers = ['anthropic', 'vsegpt']
+
+
+[voice_trigger]
+enabled = false
+default_provider = "openwakeword"
+wake_words = ['irene', 'jarvis']
 confidence_threshold = 0.8
-provider_cascade_order = ["hybrid_keyword_matcher", "spacy_nlu"]
-fallback_intent = "conversation.general"
+buffer_seconds = 1.0
+timeout_seconds = 5.0
 
-# JSON donation system for API
-donation_collection_enabled = true
-parameter_extraction_enabled = true
-context_processing_enabled = true
 
-# API-optimized performance
-max_cascade_attempts = 3
-cascade_timeout_ms = 100
-cache_recognition_results = true
-cache_ttl_seconds = 1800  # Longer cache for API
-
-[providers.text_processing]
-# Full text processing for API requests
-enabled = ["general_text_processor", "number_text_processor"]
-disabled = ["asr_text_processor", "tts_text_processor"]
-default = "general_text_processor"
-
-# ============================================================
-# INTENT SYSTEM - Full Intent Processing
-# ============================================================
-[intents]
+[nlu]
 enabled = true
+default_provider = "hybrid_keyword_matcher"
 confidence_threshold = 0.7
-fallback_handler = "conversation"
+fallback_intent = "conversation.general"
+provider_cascade_order = ['hybrid_keyword_matcher', 'spacy_nlu']
+max_cascade_attempts = 4
+cascade_timeout_ms = 200
+cache_recognition_results = false
+cache_ttl_seconds = 300
 
-[intents.handlers]
-# All intent handlers for rich API functionality
-enabled = ["conversation", "greetings", "timer", "datetime", "system"]
-disabled = ["train_schedule"]  # Remove specialized handlers
 
-# ============================================================
-# PLUGIN SYSTEM - Service Plugins
-# ============================================================
-[plugins]
-enabled = []  # Builtin plugins converted to intent handlers in Phase 3
-disabled = []  # No builtin plugins remain
-
-# ============================================================
-# WEB API - Production Web Interface
-# ============================================================
-[webapi]
+[text_processor]
 enabled = true
-host = "0.0.0.0"
-port = 8000
-cors_enabled = true
-static_files = true
+stages = ['asr_output', 'tts_input', 'command_input', 'general']
 
-# Rate limiting for production
-rate_limit_enabled = true
-rate_limit_requests = 100
-rate_limit_window = 60
 
-# Security settings
-api_key_required = true
-https_redirect = true
 
 # ============================================================
-# PROVIDER CONFIGURATIONS - API Optimized
+# WORKFLOWS - Processing Pipelines
 # ============================================================
+[workflows]
+enabled = ['unified_voice_assistant']
+default = "unified_voice_assistant"
 
-# OpenAI Configuration
-[providers.llm.openai]
-api_key = "${OPENAI_API_KEY}"
-model = "gpt-3.5-turbo"  # Faster model for API responses
-max_tokens = 100
-temperature = 0.5
-timeout = 10.0
+# ============================================================
+# ASSET MANAGEMENT - Environment-Driven
+# ============================================================
+[assets]
+auto_create_dirs = true
+# Paths use environment variable defaults:
+# IRENE_ASSETS_ROOT (default: ~/.cache/irene)
 
-# Anthropic Configuration
-[providers.llm.anthropic]
-api_key = "${ANTHROPIC_API_KEY}"
-model = "claude-3-haiku-20240307"  # Fastest model
-max_tokens = 100
-timeout = 10.0
+# Language and locale
+language = "en-US"
 
-# NLU Provider Configurations for API
-
-# Hybrid Keyword Matcher Provider (API-optimized)
-[components.nlu.providers.keyword_matcher]
-enabled = true
-provider_class = "HybridKeywordMatcherProvider"
-pattern_confidence = 0.9
-fuzzy_enabled = true
-fuzzy_threshold = 0.8
-confidence_threshold = 0.8
-
-# Disable spaCy rules for API (using semantic instead)
-[components.nlu.providers.spacy_nlu]
-enabled = false 
+# Runtime settings
+max_concurrent_commands = 10
+command_timeout_seconds = 30.0
+context_timeout_minutes = 30
